Update to latest yeoman generator

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <script src="app://bower_components/pace/pace.js"></script>
     <link href="app://bower_components/pace/themes/red/pace-theme-center-simple.css" rel="stylesheet">
-    <link rel="import" href="editor-framework://page/ui/ui.html">
+    <link rel="import" href="editor-framework://lib/renderer/ui/ui.html">
   </head>
 
   <body class="layout vertical">
